Fixed alignment for alerts dismissal link (x) (fixes #1022)

--- a/assets/joomla/css/bootstrap-gantry.css
+++ b/assets/joomla/css/bootstrap-gantry.css
@@ -2947,7 +2947,6 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert .close {
-	position: relative;
 	top: -2px;
 	right: -21px;
 	line-height: 20px;
